@@ -10,11 +10,12 @@ import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
 import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.RecipeIngredientRole;
-import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.IRecipeCategory;
+import mezz.jei.api.recipe.types.IRecipeType;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -31,7 +32,7 @@ public class VillagerWorkshoppingCategory implements IRecipeCategory<VillagerWor
     }
 
     @Override
-    public @NotNull RecipeType<VillagerWorkshopRecipe> getRecipeType()
+    public @NotNull IRecipeType<VillagerWorkshopRecipe> getRecipeType()
     {
         return JEIRecipeType.VILLAGER_WORKSHOP_TYPE;
     }
@@ -69,8 +70,10 @@ public class VillagerWorkshoppingCategory implements IRecipeCategory<VillagerWor
     @Override
     public void setRecipe(IRecipeLayoutBuilder builder, VillagerWorkshopRecipe recipe, @NotNull IFocusGroup focuses)
     {
-        builder.addSlot(RecipeIngredientRole.INPUT, 1, 1).addIngredients(recipe.getIngredients().getFirst());
-        builder.addSlot(RecipeIngredientRole.OUTPUT, 59, 1).addItemStack(recipe.getResultItem(null));
+        Item inputItem = recipe.input().getValues().get(0).value();
+        ItemStack outputItem = recipe.result();
+        builder.addSlot(RecipeIngredientRole.INPUT, 1, 1).add(inputItem);
+        builder.addSlot(RecipeIngredientRole.OUTPUT, 59, 1).add(outputItem);
     }
 
     private static ResourceLocation getBackgroundTexture()
